--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/prasoonjha/threejs#readme",
   "devDependencies": {
+    "@types/dat.gui": "^0.7.7",
     "@types/three": "^0.139.0",
+    "dat.gui": "^0.7.9",
     "three": "^0.140.0",
     "ts-loader": "^9.3.0",
     "webpack": "^5.72.0",
